# font_replacement

./: CMakeLists.txt  README.md  config.ini  fontreplacement.cpp  install.md
lib/: colour.h  config.h  frame.h  iniparser.hpp  textbox.h
src/: colour.cpp  config.cpp  frame.cpp  textbox.cpp
